--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -3,7 +3,7 @@
   --estatistic-size: #111111;
   --services-size: #2e2e2e;
   --answers: #404040;
-  --bc-02: #b2b2b2;
+  --fs-02: #b2b2b2;
   --light: #ffffff;
   --bc-04: #fcf8f5;
   --bc-01: #f7f1df;
