--- a/src/css/sessao_banner_responsivo.css
+++ b/src/css/sessao_banner_responsivo.css
@@ -1,112 +1,91 @@
-@media screen and (max-width:430px) {
-   
-    
-  
-    .hero .container .agendamento{
-        min-width: 430px ;
-        margin-right: 120px;
-        padding-top: 28px;
-      
-
-    }
-   h1{
+/* @media screen and (max-width: 430px) {
+  .hero .container .agendamento {
+    min-width: 430px;
+    margin-right: 120px;
+    padding-top: 28px;
+  }
+  h1 {
     width: 200px;
-   }
-    .hero .container .agendamento h1{
-       max-width: 300px;
-       margin-left: 30px;
-      
- 
-        color: var(--title-button);
-        font-size:24px;
-        line-height: 31px;
-      
-      }
-      .hero .container .agendamento p{
-        max-width:300px ;
-        margin-bottom: 20px;
-        margin-top: 10px;
-        color: var(--services-size);
-        font-size: 2rem;
-        line-height: 23px;
-        margin-left: 30px;
-       
-      
-      }
-      .btn{
-        width: 200px;
-         font-size: 15px;
-         height: 50px;
-         margin-bottom: 32px;
-         margin-left: 36px;
-      }
-     
-  
-    a{
-        min-width: 20px;
-    }
-    .hero, .container{
-        display: flex;
-        flex-direction: column;
-       min-width: 430px;
-    }
-    #banner{
-        min-width: 400px;
-         left: 3.5px;
-         margin-right:  100px;
+  }
+  .hero .container .agendamento h1 {
+    max-width: 300px;
+    margin-left: 30px;
 
-    }
-    .estatisticas, .name_card{
-        display: flex;
-        flex-direction: column;
-        min-width:430px ;
-     
+    color: var(--title-button);
+    font-size: 24px;
+    line-height: 31px;
+  }
+  .hero .container .agendamento p {
+    max-width: 300px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    color: var(--services-size);
+    font-size: 2rem;
+    line-height: 23px;
+    margin-left: 30px;
+  }
+  .btn {
+    width: 200px;
+    font-size: 15px;
+    height: 50px;
+    margin-bottom: 32px;
+    margin-left: 36px;
+  }
 
-    }
-    
-    .estatisticas .container .card-estatisticas{
-        display: flex;
-        flex-direction: column;
-   
-        background-color: var(--light);
-        min-width: 430px;
-        height: 450px;
-  
-      
-      
-      }
-       
-      .estatisticas .container .card-estatisticas ul li{
-  
-        color: var(--estatistic-size);
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        font-size:30px;
-      }
-      .estatisticas .container .card-estatisticas ul li span{
-        color: #DC2428;
-        line-height: 20.8px;
-      }
-      .info-services .container h2{
-        font-size:24px ;
-        line-height: 32px;
-       
-      }
-       .nav ul li {
-        font-size: 18px;
-      
-      }
-      .header .logo {
-        font-size: 18px;
-        padding-bottom: 15px;
-      }
-      .header {
-        display: flex;
-        flex-direction: column;
-       
-      }
-      
-     
-     
-    
+  a {
+    min-width: 20px;
+  }
+  .hero,
+  .container {
+    display: flex;
+    flex-direction: column;
+    min-width: 430px;
+  }
+  #banner {
+    min-width: 400px;
+    left: 3.5px;
+    margin-right: 100px;
+  }
+  .estatisticas,
+  .name_card {
+    display: flex;
+    flex-direction: column;
+    min-width: 430px;
+  }
+
+  .estatisticas .container .card-estatisticas {
+    display: flex;
+    flex-direction: column;
+
+    background-color: var(--light);
+    min-width: 430px;
+    height: 450px;
+  }
+
+  .estatisticas .container .card-estatisticas ul li {
+    color: var(--estatistic-size);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 30px;
+  }
+  .estatisticas .container .card-estatisticas ul li span {
+    color: #dc2428;
+    line-height: 20.8px;
+  }
+  .info-services .container h2 {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .nav ul li {
+    font-size: 18px;
+  }
+  .header .logo {
+    font-size: 18px;
+    padding-bottom: 15px;
+  }
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+} */
