--- a/src/css/style_container_orientacao.css
+++ b/src/css/style_container_orientacao.css
@@ -58,6 +58,6 @@
 .imagem_coco {
   width: 37.1rem;
   height: 47rem;
-  box-shadow:48px -58px 0px #FFCCD1;
+  box-shadow:4.8rem -58px 0px #FFCCD1;
   margin: 13rem 19rem 8rem 8rem;
 }
