--- a/src/css/style.css
+++ b/src/css/style.css
@@ -200,23 +200,22 @@ body {
   line-height: 2.34rem;
 }
 
-.questions-answer .container{
+.questions-answer .container {
   display: flex;
   gap: 2rem;
   padding: 3rem 0 0 5rem;
 }
 
-.questions-answer .wrapper-questions-answer{
+.questions-answer .wrapper-questions-answer {
   display: flex;
   flex-direction: column;
   gap: 2rem;
   align-items: center;
   justify-content: center;
   width: 120rem;
-
 }
 
-.questions-answer .wrapper-questions-answer .questions{
+.questions-answer .wrapper-questions-answer .questions {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -226,10 +225,9 @@ body {
   width: 53rem;
   padding: 2rem 1rem;
   overflow: hiden;
-
 }
 
-.questions-answer .wrapper-questions-answer .questions .question{
+.questions-answer .wrapper-questions-answer .questions .question {
   font-size: 2rem;
   width: 50rem;
   cursor: pointer;
@@ -238,27 +236,21 @@ body {
   background-position: top 0.8rem right 0;
   background-size: 1.5rem;
   transition: 0.2s ease;
-  
 }
 
-.questions-answer .wrapper-questions-answer .questions .answer{
+.questions-answer .wrapper-questions-answer .questions .answer {
   display: none;
   font-size: 1.2rem;
   width: 50rem;
-  
-  
 }
 
-.questions-answer .wrapper-questions-answer .questions.ativo .answer{
+.questions-answer .wrapper-questions-answer .questions.ativo .answer {
   display: block;
 }
 
-.questions-answer .wrapper-questions-answer .questions.ativo .question{
+.questions-answer .wrapper-questions-answer .questions.ativo .question {
   background-image: url(../images/seta-cima.png);
-  
 }
-
-
 
 .imagem_coco {
   width: 37.1rem;
@@ -267,179 +259,56 @@ body {
   margin: 13rem 19rem 8rem 8rem;
 }
 
-#carousel-container {
-  width: 95%;
-  height: auto;
+#slide-container {
   overflow: hidden;
   position: relative;
+  padding: 0 3rem 7rem 3rem;
 }
 
-.carousel {
+.slide {
+  height: 300px;
   display: flex;
-  align-items: center;
-  gap: 6rem;
-  transition: transform 0.5s ease-in-out;
+  gap: 3rem;
+  transition: transform 0.3s ease-in-out;
 }
 
-.card {
-  flex: 0 0 20rem;
-  margin: 0 10px;
+.slide-item {
+  flex: 0 0 450px;
   background-color: var(--bc-01);
   border-radius: 0.8rem;
+  padding: 3rem;
+  gap: 2rem;
   display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: 24px;
-  gap: 2rem;
-  padding: 2rem;
 }
 
-.card-1 img {
+.slide-container .slide .slide-item img {
   width: 17rem;
   height: 17rem;
-  border-radius: 50%;
 }
 
-.card-1 .info-comments h4 {
+.info-comments h4 {
   font-size: 1.6rem;
   font-weight: 700;
   border-bottom: 0.1rem solid;
 }
 
-.card-1 .info-comments p {
+.info-comments p {
   width: 18.28rem;
   font-size: 1.8rem;
   line-height: 2.4rem;
   padding-top: 1.4rem;
 }
 
-.card-1 .info-comments .stars {
+.stars {
   display: flex;
   padding-top: 1.3rem;
 }
 
-.card-1 .info-comments .stars li img {
+.stars li img {
   width: 2.8rem;
   height: 2.4rem;
 }
-
-
-
-.nav-left,
-.nav-right {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 10px;
-  background-color: #f1f1f1;
-  border: none;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.nav-left {
-  left: 10px;
-}
-
-.nav-right {
-  right: 10px;
-}
-
-/* .comments .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  overflow: hidden;
-}
-
-.comments .container h2 {
-  font-size: 3.6rem;
-  color: var(--title-button);
-  padding: 8rem 0 6rem 0;
-}
-
-.comments .container .wrapper-comments {
-  display: flex;
-  align-items: center;
-  gap: 6rem;
-}
-
-.comments .container .wrapper-comments .card-comments {
-  display: flex;
-  align-items: center;
-  width: 45.1rem;
-  height: 25.42rem;
-  background-color: var(--bc-01);
-  border-radius: 0.8rem;
-  padding: 4rem;
-  gap: 2rem;
-}
-
-.comments .container .wrapper-comments .card-comments img {
-  width: 17rem;
-  height: 17rem;
-  border-radius: 50%;
-}
-
-.comments .container .wrapper-comments .card-comments .info-comments {
-  display: flex;
-  flex-direction: column;
-  width: 14rem;
-}
-
-.comments .container .wrapper-comments .card-comments .info-comments h4 {
-  font-size: 1.6rem;
-  font-weight: 700;
-  border-bottom: 0.1rem solid;
-}
-
-.comments .container .wrapper-comments .card-comments .info-comments p {
-  width: 18.28rem;
-  font-size: 1.8rem;
-  line-height: 2.4rem;
-  padding-top: 1.4rem;
-}
-
-.comments .container .wrapper-comments .card-comments .info-comments .stars {
-  display: flex;
-  padding-top: 1.3rem;
-}
-
-.comments
-  .container
-  .wrapper-comments
-  .card-comments
-  .info-comments
-  .stars
-  li
-  img {
-  width: 2.8rem;
-  height: 2.4rem;
-}
-
-.comments .container .elipse ul {
-  display: flex;
-  gap: 3.6rem;
-  padding: 4.4rem 0 12rem 0;
-}
-
-.comments .container .elipse ul li {
-  shape-outside: circle();
-  clip-path: circle();
-  background-color: var(--bc-01);
-  width: 2rem;
-  height: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.comments .container .elipse ul .selecionada {
-  background-color: var(--title-button);
-} */
 
 .footer {
   padding-block: 5rem;
