--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");
 
+html {
+  font-size: 62.5%;
+  font-weight: 400;
+  font-family: "DM Sans", sans-serif;
+}
+
 body {
   min-height: 100vh;
   margin: 0 auto;
